<resources>
    <string name="app_name">SmartCharger</string>

    <string name="btn_Cancel"> 취 소 </string>
    <string name="btn_confirm">확인</string>
    <string name="btn_sms"><font color="#FF000000">충전 정보\n문자서비스</font></string>
    <string name="btn_stop"><font color="#FF000000">충전 중지</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="initMessage"><font color='#FF000000'>차량에 커넥터를 연결하고 시작</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="startMessage">충전시작</string>
    <string name="adminTitle"><font color='#e87f00'>패스워드</font><font color='#000000'>를 입력한 후 확인 버튼을 누르세요.</font></string>
    <string name="authSelectMessage"><font color="#2C3F8E">결제 방법</font><font color="#FF000000">을 선택해 주세요.</font></string>
    <string name="memberMessage"><font color="#2C3F8E"> 회원 </font></string>
    <string name="memberInfoMessage">회원카드를 통해 간편하게\n충전이 가능합니다.</string>
    <string name="nomemberMessage">비회원</string>
    <string name="nomemberInfoMessage">카드결제를 통해\n충전이 가능합니다.</string>
    <string name="socMessage">SOC 설정해 주세요.</string>
    <string name="socGuideMessage">좌우로 움직여\n목표 SOC를 설정하세요.</string>
    <string name="creditCard"><font color="#2C3F8E">신용 카드</font></string>
    <string name="creditCardMessage"><font color="#2E4298">결제 카드</font>를 <font color="#2E4298">리더기</font>에 접촉하여 주세요.</string>
    <string name="creditCardTaggingSubMessage">※ 선결제로 진행되며, 충전 후 사용한 금액만큼 최종 결제됩니다.\n나머지 금액은 자동 취소됩니다.</string>

    <string name="memberCardMessage"><font color="#2E4298">회원카드</font>를 <font color="#2E4298">리더기</font>에 접촉하여 주세요.</string>
    <string name="memberCardWaitMessage">회원 <font color="#2E4298">확인 중</font>입니다.잠시만 기다려주세요.</string>
    <string name="chargeInfo">충전정보</string>
    <string name="creditMessage"><font color="#2E4298">결제 진행</font> 중입니다. 잠시만 기다려주세요.</string>
    <string name="plugWaitMessage">차량에 <font color='#2E4298'>커넥터</font>를 연결 주세요</string>
    <string name="plugStartMessage"><font color='#2E4298'>충전</font>이 잠시 후, 시작됩니다. </string>
    <string name="chargingMessage"><font color="#2E4298">차량</font>이 <font color="#2E4298">충전 중</font>입니다.</string>
    <string name="chargingFinishMessage"><font color="#2E4298">충전이 완료</font>되었습니다.</string>
    <string name="qrhMessage"><font color="#2E4298">QR CODE</font>를 스캔하여 주세요</string>
    <string name="smsMessage"><font color="#2E4298">충전 정보</font>를 수신할 <font color="#2E4298">전화번호</font>를 입력해주세요.</string>
    <string name="faultMessage"><font color="#2E4298">Fault Message</font></string>
    <string name="creditwaitMessage"><font color="#2E4298">신용카드</font>를<font color="#2E4298"> 카드 투입구</font>에 넣어 주세요.</string>
    <string name="configSettingMessage"><font color="#2E4298">충전기 환경 정보</font>를 설정하여 주세요</string>
    <string name="chargingNotification">차량에서 커넥터를 분리하지 마세요.</string>
    <string name="FinishNotification"><font color="#2E4298"> 충전이</font> 완료되었습니다.</string>
    <string name="stopMessage"><font color='#000000'>충전을</font><font color="#C90000"> 종료</font> 하시겠습니까?</string>
    <string name="stoppingMessage"><font color='#000000'>잠시 후, 충전이</font><font color='#c90000'> 종료</font><font color='#000000'>됩니다.</font></string>
    <string name="authSelect">인증 방법 선택</string>
    <string name="chargingUnit">충전 단가</string>
    <string name="chargeAmount">충전 금액</string>
    <string name="chargingTime">충전 시간</string>
    <string name="chargeOfAmount">충전 사용량</string>
    <string name="remainTime">충전 남은 시간</string>
    <string name="rechargeUnitPrice">선결제 금액</string>
    <string name="PartCancelPay">부분 취소 금액</string>
    <string name="paymentMessage"> 실결제 금액</string>
    <string name="moneyUnit"> 원</string>
    <string name="powerUnit"> kW</string>
    <string name="powerAmountUnit"> kWh</string>
    <string name="chargerSpeed">충전 속도 : </string>
    <string name="priceMessage"> 충전 금액 </string>
    <string name="chargeUnit">충전 단가 : </string>
    <string name="chargeExpect"><font color="#999999">예상 충전량 : </font></string>

    <string name="preAmtMessage"> 결제 금액</string>
    <string name="errorMessage">SYSTEM ERROR MESSAGE</string>

    <string name="configButton">환경설정</string>
    <string name="webSocketButton">Web소켓</string>
    <string name="controlButton">Control 보드</string>
    <string name="uiButton">화면전환</string>
    <string name="userInfoButton">회원등록</string>
    <string name="exitButton">종 료</string>
    <string name="btnKLogDel">로그삭제</string>
    <string name="rx">RX</string>
    <string name="item_title">item title</string>
    <string name="trueText">true</string>

    <string name="txtChargerType">충전기 타입</string>
    <string name="txtModel">충전기 모델명</string>
    <string name="txtChargerId">충전기 ID</string>
    <string name="txtServerURL">서버 URL</string>
    <string name="txtServerPort">서버 Port</string>
    <string name="txtControlBoard">Control Port</string>
    <string name="txtRFCard">RF-Card Port</string>
    <string name="txtCredit">CreditCard Port</string>
    <string name="txtPLC">PLC Port</string>
    <string name="txtDR">Duty (%)</string>
    <string name="txtTestPrice">Test 단가</string>
    <string name="txtDuty"> (7kW:50%, 3.3kW:25%)</string>
    <string name="payMode">결제 모드</string>
    <string name="rbMemberCredit">회원카드＋신용카드</string>
    <string name="rbMember">회원카드</string>
    <string name="rbCredit">신용카드</string>
    <string name="mode">인증 모드</string>
    <string name="rbServerMode"> 서버 </string>
    <string name="rbAutoMode"> Auto </string>
    <string name="rbTestMode"> 테스트 </string>
    <string name="rbPowerMeterMode"> 로컬 회원 </string>
    <string name="txtVendorCode">제조사 코드</string>
    <string name="txtMID">결재 MID</string>
    <string name="txtSerial">충전기 Serial</string>
    <string name="txtFirmware">Firmware Ver.</string>
    <string name="txtIccId">Modem ICC ID</string>
    <string name="btnKeyBoard">Hidden</string>
    <string name="txtImsi">Modem IMSI</string>
    <string name="txtGps">GPS 좌표</string>
    <string name="txtXGps">X 좌표</string>
    <string name="txtYGps">Y 좌표</string>
    <string name="txtM2mTel">모뎀 전화번호</string>
    <string name="txtRfMaker">RF 제조사</string>
    <string name="txtMeyerValueDelay">MeterValue Delay</string>
    <string name="txtTargetChargingTime"> 제한 충전 시간(분)</string>
    <string name="txtStopConfirm"> OCPP Mode</string>
    <string name="txtSigned"> Signed(WSS/WS)</string>
    <string name="txtChargerPowerType"> 7kW</string>
    <string name="txtUsedPlc"> used PLC</string>
    <string name="btnConfigSave">저장</string>
    <string name="btnConfigExit">Exit</string>
    <string name="btnPowerOff">리부팅</string>
    <string name="chargerIdSaveFail">충전소 ID를 입력하세요"</string>
    <string name="configSaveTitle">환경 설정 저장</string>
    <string name="configSaveSuccess">수정 내용 저장 성공</string>
    <string name="configSaveYesNo">수정하신 내용을 저장하시겠습니까?</string>
    <string name="configSaveCancel">수정 내용 취소</string>
    <string name="txtSoc">SoC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>