<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_type"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:text="@string/rx"
        android:textSize="18sp"
        android:textColor="#99FF33"
        android:gravity="center" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/item_title"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/item_value"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/trueText"
        android:textSize="16sp"
        android:textColor="@color/orange"
        android:gravity="center_vertical" />

</LinearLayout>