<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="388dp"
    tools:context=".pages.MessageYesNoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopMessage"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ani_loading"
        android:importantForAccessibility="no"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/btnCancel"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:text="@string/btn_Cancel"
        app:backgroundTint="@null"
        android:layout_marginTop="150dp"
        android:layout_marginStart="70dp"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_blue_button"
        app:layout_constraintLeft_toLeftOf="@id/txtMessage"
        app:layout_constraintTop_toBottomOf="@id/txtMessage"/>



    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:text="@string/btn_confirm"
        app:backgroundTint="@null"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_white_button"
        app:layout_constraintLeft_toRightOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />



</androidx.constraintlayout.widget.ConstraintLayout>