<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/initLayout"
    android:layout_width="800dp"
    android:layout_height="388dp"
    tools:context=".pages.InitFragment">

    <!-- TODO: Update blank fragment layout -->

    <View
        android:id="@+id/viewCircle"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:background="@drawable/layer_list_oval_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/imageViewCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/car_blue"
        app:layout_constraintTop_toTopOf="@id/viewCircle"
        app:layout_constraintStart_toStartOf="@id/viewCircle"
        app:layout_constraintEnd_toEndOf="@id/viewCircle"
        tools:ignore="contentDescription" />


    <TextView
        android:id="@+id/textViewStartMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/startMessage"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/imageViewCar"
        app:layout_constraintStart_toStartOf="@id/imageViewCar"
        app:layout_constraintEnd_toEndOf="@id/imageViewCar" />


    <TextView
        android:id="@+id/txtInitMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/initMessage"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textViewStartMessage"
        app:layout_constraintStart_toStartOf="@id/textViewStartMessage"
        app:layout_constraintEnd_toEndOf="@id/textViewStartMessage" />

    <TextView
        android:id="@+id/textViewMemberUnitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/chargingUnit"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@id/txtInitMessage"
        app:layout_constraintTop_toBottomOf="@id/txtInitMessage"
        app:layout_constraintEnd_toEndOf="@id/txtInitMessage"/>


</androidx.constraintlayout.widget.ConstraintLayout>