<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="388dp"
    tools:context=".pages.AdminPasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,TextViewEdits" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="372dp"
        android:layout_height="2dp"
        android:layout_centerInParent="true"
        android:background="#224E98"
        android:layout_marginTop="2dp"
        android:layout_marginStart="-20dp"
        app:layout_constraintLeft_toLeftOf="@id/editPassword"
        app:layout_constraintTop_toBottomOf="@id/editPassword" />

    <ImageView
        android:id="@+id/imgAdmin"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/img_admin"
        android:layout_marginTop="5dp"
        android:layout_marginStart="-90dp"
        app:layout_constraintLeft_toLeftOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/editPassword"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtAdminTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:text="@string/adminTitle"
        app:layout_constraintLeft_toRightOf="@id/imgAdmin"
        app:layout_constraintTop_toTopOf="@id/imgAdmin" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/btn_Cancel"
        app:backgroundTint="@null"
        android:textSize="26sp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:background="@drawable/rounded_white_button"
        app:layout_constraintLeft_toLeftOf="@id/imgAdmin"
        app:layout_constraintTop_toBottomOf="@id/imgAdmin" />


    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:text="@string/btn_confirm"
        android:textSize="26sp"
        app:backgroundTint="@null"
        android:background="@drawable/rounded_blue_button"
        app:layout_constraintLeft_toRightOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>