<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="388dp"
    tools:context=".pages.ChargingFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txtChargingMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chargingMessage"
        android:textSize="36sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSoc"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="200dp"
        android:gravity="center_horizontal"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtChargingMessage"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imgUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/money_2"
        app:layout_constraintStart_toEndOf="@id/txtSoc"
        app:layout_constraintTop_toBottomOf="@id/txtChargingMessage"
        tools:ignore="contentDescription" />


    <TextView
        android:id="@+id/txtUnitTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:text="@string/chargeUnit"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@id/imgUnit"
        app:layout_constraintStart_toEndOf="@id/imgUnit"/>

    <TextView
        android:id="@+id/txtPowerUnitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="end"
        android:text="222 원 "
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="@id/txtUnitTitle"
        app:layout_constraintStart_toEndOf="@id/txtUnitTitle"
        app:layout_constraintBottom_toBottomOf="@id/txtUnitTitle"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="700dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#EFF5FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtSoc"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgChargingAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/electric_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtChargingAmtTitle"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/gin_grey"
                android:text="@string/chargeOfAmount"
                android:textSize="22sp"
                app:layout_constraintLeft_toRightOf="@id/imgChargingAmt"
                app:layout_constraintTop_toTopOf="@id/imgChargingAmt"/>

            <TextView
                android:id="@+id/txtAmountOfCharge"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:gravity="center|right"
                android:text="10.00 kWh"
                android:textSize="28sp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="@id/imgChargingAmt"
                app:layout_constraintTop_toBottomOf="@id/imgChargingAmt" />


            <ImageView
                android:id="@+id/imgAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:importantForAccessibility="no"
                android:src="@drawable/electirc_money"
                app:layout_constraintStart_toEndOf="@id/txtChargingAmtTitle"
                app:layout_constraintTop_toTopOf="@id/txtChargingAmtTitle"/>

            <TextView
                android:id="@+id/txtAmtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/gin_grey"
                android:text="@string/chargeAmount"
                android:textSize="22sp"
                app:layout_constraintLeft_toRightOf="@id/imgAmt"
                app:layout_constraintBottom_toBottomOf="@id/txtChargingAmtTitle"/>

            <TextView
                android:id="@+id/txtChargePay"
                android:layout_width="140dp"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|right"
                android:text="120,999 원"
                android:textSize="28sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="@id/imgAmt"
                app:layout_constraintTop_toBottomOf="@id/imgAmt"
                tools:ignore="RtlHardcoded" />


            <ImageView
                android:id="@+id/imgChargingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:importantForAccessibility="no"
                android:src="@drawable/time"
                app:layout_constraintStart_toEndOf="@id/txtAmtTitle"
                app:layout_constraintTop_toTopOf="@id/txtAmtTitle"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/gin_grey"
                android:text="@string/chargingTime"
                android:textSize="22sp"
                app:layout_constraintLeft_toRightOf="@id/imgChargingTime"
                app:layout_constraintBottom_toBottomOf="@id/txtAmtTitle"/>

            <TextView
                android:id="@+id/txtChargeTime"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="00:00:00"
                android:textSize="28sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="@id/imgChargingTime"
                app:layout_constraintTop_toBottomOf="@id/imgChargingTime"
                tools:ignore="RtlHardcoded" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnChargingStop"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:text="@string/btn_stop"
        app:backgroundTint="@null"
        android:background="@drawable/rounded_white_button"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>